@@ -22,6 +22,7 @@ import org.apache.uima.UimaContext;
 import org.apache.uima.resource.ResourceInitializationException;
 import org.uimafit.component.initialize.ConfigurationParameterInitializer;
 import org.uimafit.component.initialize.ExternalResourceInitializer;
+import org.uimafit.util.ExtendedLogger;
 
 /**
  * Base class for CAS annotators which initializes itself based on annotations.
@@ -30,6 +31,15 @@ import org.uimafit.component.initialize.ExternalResourceInitializer;
  */
 public abstract class CasAnnotator_ImplBase extends
 		org.apache.uima.analysis_component.CasAnnotator_ImplBase {
+	private ExtendedLogger logger;
+	
+	public ExtendedLogger getLogger() {
+		if (logger == null) {
+			logger = new ExtendedLogger(getContext());
+		}
+		return logger;
+	}
+	
 	@Override
 	public void initialize(UimaContext context) throws ResourceInitializationException {
 		super.initialize(context);
