@@ -24,6 +24,7 @@ import org.apache.uima.resource.ResourceInitializationException;
 import org.uimafit.component.initialize.ConfigurationParameterInitializer;
 import org.uimafit.component.initialize.ExternalResourceInitializer;
 import org.uimafit.descriptor.OperationalProperties;
+import org.uimafit.util.ExtendedLogger;
 
 /**
  * Base class for CAS consumers (actually a {@link CasAnnotator_ImplBase}) which initializes itself
@@ -34,6 +35,15 @@ import org.uimafit.descriptor.OperationalProperties;
 @OperationalProperties(multipleDeploymentAllowed = false)
 public abstract class CasConsumer_ImplBase extends
 		org.apache.uima.analysis_component.CasAnnotator_ImplBase {
+	private ExtendedLogger logger;
+	
+	public ExtendedLogger getLogger() {
+		if (logger == null) {
+			logger = new ExtendedLogger(getContext());
+		}
+		return logger;
+	}
+	
 	@Override
 	public void initialize(UimaContext context) throws ResourceInitializationException {
 		super.initialize(context);
